// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingStars snapshots black color scheme 1`] = `
<scale-toggle-button color-scheme="black" icon-position="before">
  <mock:shadow-root>
    <button class="toggle-button toggle-button--black toggle-button--icon-before toggle-button--large toggle-button--primary" id="toggle-button-2" part="toggle-button large primary toggle-button--icon-before black" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Test
</scale-toggle-button>
`;

exports[`RatingStars snapshots default props 1`] = `
<scale-toggle-button icon-position="before">
  <mock:shadow-root>
    <button class="toggle-button toggle-button--icon-before toggle-button--large toggle-button--light toggle-button--primary" id="toggle-button-0" part="toggle-button large primary toggle-button--icon-before light" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Test
</scale-toggle-button>
`;

exports[`RatingStars snapshots disabled 1`] = `
<scale-toggle-button disabled="" icon-position="before" size="large">
  <mock:shadow-root>
    <button class="toggle-button toggle-button--icon-before toggle-button--large toggle-button--light toggle-button--primary" disabled="" id="toggle-button-3" part="toggle-button large primary toggle-button--icon-before light" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Test
</scale-toggle-button>
`;

exports[`RatingStars snapshots iconAfter 1`] = `
<scale-toggle-button icon-position="after" radius="left" styles="color:red">
  <mock:shadow-root>
    <style>
      color:red
    </style>
    <button class="toggle-button toggle-button--icon-after toggle-button--large toggle-button--left toggle-button--light toggle-button--primary" id="toggle-button-7" part="toggle-button large primary toggle-button--icon-after left light" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Test
  <scale-icon-action-search size="24"></scale-icon-action-search>
</scale-toggle-button>
`;

exports[`RatingStars snapshots iconBefore 1`] = `
<scale-toggle-button icon-position="before" radius="right">
  <mock:shadow-root>
    <button class="toggle-button toggle-button--icon-before toggle-button--large toggle-button--light toggle-button--primary toggle-button--right" id="toggle-button-6" part="toggle-button large primary toggle-button--icon-before right light" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  <scale-icon-action-search size="24"></scale-icon-action-search>
  Test
</scale-toggle-button>
`;

exports[`RatingStars snapshots iconOnly 1`] = `
<scale-toggle-button icon-position="before" radius="both" selected="">
  <mock:shadow-root>
    <button aria-pressed="" class="toggle-button toggle-button--both toggle-button--icon-before toggle-button--large toggle-button--light toggle-button--primary toggle-button--selected" id="toggle-button-5" part="toggle-button large primary toggle-button--icon-before selected both light" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  <scale-icon-action-search size="24"></scale-icon-action-search>
</scale-toggle-button>
`;

exports[`RatingStars snapshots regular size secondary 1`] = `
<scale-toggle-button icon-position="before" size="regular" variant="secondary">
  <mock:shadow-root>
    <button class="toggle-button toggle-button--icon-before toggle-button--light toggle-button--regular toggle-button--secondary" id="toggle-button-1" part="toggle-button regular secondary toggle-button--icon-before light" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Test
</scale-toggle-button>
`;

exports[`RatingStars snapshots selected 1`] = `
<scale-toggle-button icon-position="before" selected="" size="xs">
  <mock:shadow-root>
    <button aria-pressed="" class="toggle-button toggle-button--icon-before toggle-button--light toggle-button--primary toggle-button--selected toggle-button--xs" id="toggle-button-4" part="toggle-button xs primary toggle-button--icon-before selected light" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
  Test
</scale-toggle-button>
`;
